--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Cocktails#index</h1>
-<p>Find me in app/views/cocktails/index.html.erb</p>
+<h1>Cocktails</h1>
+<ul>
+  <% @cocktails.each do |cocktail| %>
+    <div class="card">
+      <li>
+        <%= link_to cocktail.name, cocktail_path(cocktail) %>
+      </li>
+      <% end %>
+    </div>
+</ul>
+<br>
+<%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-warning"%>
