--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Cocktails#show</h1>
-<p>Find me in app/views/cocktails/show.html.erb</p>
+<h2> <%=  @cocktail.name %> </h2>
+<ul>
+  <% @cocktail.doses.each do |d| %>
+  <li>
+    <%= d.description %>
+    <%= d.ingredient.name %>
+  </li>
+  <% end %>
+</ul>
+<br>
+<%= link_to "See all cocktails", cocktails_path, class: "btn btn-warning" %>
+<br>
+<%= link_to "Add a dose", new_cocktail_dose_path(@cocktail), class: "btn btn-warning" %>
+
+
